@@ -897,7 +897,7 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-fsched-stalled-insns-dep",            FlagParameterID::kSchedStalledInsnsDep},
   {"-fschedule-insns",                     FlagParameterID::kScheduleInsns},
   {"-fschedule-insns2",                    FlagParameterID::kScheduleInsns2},
-  {"-fsection-anchors",                    FlagParameterID::kSectionAnchors},
+  //{"-fsection-anchors",                    FlagParameterID::kSectionAnchors},
   {"-fsel-sched-pipelining",               FlagParameterID::kSelSchedPipelining},
   {"-fsel-sched-pipelining-outer-loops",   FlagParameterID::kSelSchedPipeliningOuterLoops},
   {"-fsel-sched-reschedule-pipelined",     FlagParameterID::kSelSchedReschedulePipelined},
@@ -913,7 +913,7 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-ftree-builtin-call-dce",              FlagParameterID::kTreeBuiltinCallDCE},
   {"-ftree-ccp",                           FlagParameterID::kTreeCCP},
   {"-ftree-ch",                            FlagParameterID::kTreeCH},
-  {"-ftree-coalesce-inlined-vars",         FlagParameterID::kTreeCoalesceInlinedVars},
+  //{"-ftree-coalesce-inlined-vars",         FlagParameterID::kTreeCoalesceInlinedVars},
   {"-ftree-coalesce-vars",                 FlagParameterID::kTreeCoalesceVars},
   {"-ftree-copy-prop",                     FlagParameterID::kTreeCopyProp},
   {"-ftree-copyrename",                    FlagParameterID::kTreeCopyRename},
